# distributedhardware_distributed_hardware_fwk

./: AGENT.md  AGENTS.md  CODEOWNERS  OAT.xml  README_ZH.md  README_zh.md  bundle.json  distributedhardwarefwk.gni  hisysevent.yaml  publicity.xml
application/: BUILD.gn  DHardware_UI.gni  build-profile.json5  hvigorfile.js  hvigorw  hvigorw.bat  oh-package-lock.json5  oh-package.json5
application/AppScope/: app.json  app.json5
application/entry/: UEPointUtils.ets  build-profile.json5  hvigorfile.js
application/entry/src/main/: module.json  module.json5
application/hvigor/: hvigor-config.json5  hvigor-wrapper.js
application/signature/: DHardware_UI.p7b
av_transport/: distributed_av_transport.gni
av_transport/av_trans_control_center/inner_kits/: BUILD.gn
av_transport/av_trans_control_center/inner_kits/include/: av_trans_control_center_callback.h  av_trans_control_center_callback_stub.h  av_trans_control_center_kit.h
av_transport/av_trans_control_center/inner_kits/src/: av_trans_control_center_callback.cpp  av_trans_control_center_callback_stub.cpp  av_trans_control_center_kit.cpp
av_transport/av_trans_control_center/services/include/: av_sync_manager.h  av_trans_control_center.h
av_transport/av_trans_control_center/services/src/: av_sync_manager.cpp  av_trans_control_center.cpp
av_transport/av_trans_control_center/test/fuzztest/: BUILD.gn
av_transport/av_trans_control_center/test/unittest/: BUILD.gn
av_transport/av_trans_engine/av_receiver/: BUILD.gn
av_transport/av_trans_engine/av_receiver/include/: av_audio_receiver_engine.h  av_audio_receiver_engine_provider.h  av_receiver_engine.h  av_receiver_engine_provider.h
av_transport/av_trans_engine/av_receiver/src/: av_audio_receiver_engine.cpp  av_audio_receiver_engine_provider.cpp  av_receiver_engine.cpp  av_receiver_engine_provider.cpp
av_transport/av_trans_engine/av_sender/: BUILD.gn
av_transport/av_trans_engine/av_sender/include/: av_audio_sender_engine.h  av_audio_sender_engine_provider.h  av_sender_engine.h  av_sender_engine_provider.h
av_transport/av_trans_engine/av_sender/src/: av_audio_sender_engine.cpp  av_audio_sender_engine_provider.cpp  av_sender_engine.cpp  av_sender_engine_provider.cpp
av_transport/av_trans_engine/filters/: BUILD.gn
av_transport/av_trans_engine/filters/av_trans_coder/: av_trans_audio_decoder_filter.cpp  av_trans_audio_decoder_filter.h  av_trans_audio_encoder_filter.cpp  av_trans_audio_encoder_filter.h
av_transport/av_trans_engine/filters/av_trans_input/: av_trans_audio_input_filter.cpp  av_trans_audio_input_filter.h  av_trans_bus_input_filter.cpp  av_trans_bus_input_filter.h
av_transport/av_trans_engine/filters/av_trans_output/: daudio_output_filter.cpp  daudio_output_filter.h  dsoftbus_output_filter.cpp  dsoftbus_output_filter.h
av_transport/av_trans_engine/filters/av_transport_input/: av_transport_input_filter.cpp  av_transport_input_filter.h
av_transport/av_trans_engine/filters/test/: BUILD.gn
av_transport/av_trans_handler/histreamer_ability_querier/: BUILD.gn
av_transport/common/include/: av_single_instance.h  av_sync_utils.h  av_trans_buffer.h  av_trans_constants.h  av_trans_errno.h  av_trans_log.h  av_trans_message.h  av_trans_meta.h  av_trans_types.h  av_trans_utils.h  pipeline_event.h  pipeline_status.h  single_instance.h  softbus_channel_adapter.h
av_transport/common/src/: av_sync_utils.cpp  av_trans_buffer.cpp  av_trans_log.cpp  av_trans_message.cpp  av_trans_meta.cpp  av_trans_utils.cpp  softbus_channel_adapter.cpp
av_transport/common/test/: BUILD.gn
av_transport/framework/: BUILD.gn
av_transport/interface/: i_av_engine_provider.h  i_av_engine_provider_callback.h  i_av_receiver_engine.h  i_av_receiver_engine_callback.h  i_av_sender_engine.h  i_av_sender_engine_callback.h
interfaces/inner_kits/: BUILD.gn  IAvTransControlCenterCallback.idl
interfaces/inner_kits/include/: distributed_hardware_fwk_kit.h  distributed_hardware_fwk_kit_paras.h
interfaces/inner_kits/src/: distributed_hardware_fwk_kit.cpp
interfaces/kits/napi/: BUILD.gn
services/distributedhardwarefwkservice/: BUILD.gn  distributedhardware_fwk.cfg
services/distributedhardwarefwkservice/include/: access_listener_service.h  distributed_hardware_manager.h  distributed_hardware_manager_factory.h  distributed_hardware_proxy.h  distributed_hardware_service.h  distributed_hardware_stub.h
services/distributedhardwarefwkservice/src/: access_listener_service.cpp  distributed_hardware_manager.cpp  distributed_hardware_manager_factory.cpp  distributed_hardware_proxy.cpp  distributed_hardware_service.cpp  distributed_hardware_stub.cpp
services/distributedhardwarefwkserviceimpl/: BUILD.gn
services/distributedhardwarefwkserviceimpl/include/: dh_hidump_helper.h  distributed_hardware_manager.h  distributed_hardware_proxy.h
services/distributedhardwarefwkserviceimpl/src/: dh_hidump_helper.cpp  distributed_hardware_manager.cpp  distributed_hardware_proxy.cpp
taihe/: BUILD.gn
taihe/idl/: ohos.distributedHardware.hardwareManager.taihe
taihe/src/: ani_constructor.cpp  ohos.distributedHardware.hardwareManager.impl.cpp
taihe/test/: test_main.ets
utils/: BUILD.gn
utils/include/: anonymous_string.h  device_param_mgr.h  dh_hidump_helper.h  dh_utils_hisysevent.h  dh_utils_hitrace.h  dh_utils_tool.h  histreamer_ability_parser.h  histreamer_query_tool.h
utils/include/eventbus/: event.h  event_bus.h  event_registration.h  event_sender.h  eventbus_handler.h
utils/include/log/: dh_log.h
utils/src/: anonymous_string.cpp  device_param_mgr.cpp  dh_hidump_helper.cpp  dh_utils_hisysevent.cpp  dh_utils_hitrace.cpp  dh_utils_tool.cpp  histreamer_ability_parser.cpp  histreamer_query_tool.cpp
utils/src/log/: dh_log.cpp
utils/test/: BUILD.gn
utils/test/fuzztest/: BUILD.gn
utils/test/histreamer_ability_parser/: BUILD.gn  histreamer_ability_parser_test.cpp
utils/test/unittest/: BUILD.gn
utils/test/utilstool/: BUILD.gn  device_param_mgr_test.cpp  device_param_mgr_test.h  mock_os_account_manager.cpp  mock_os_account_manager.h  utils_tool_test.cpp  utils_tool_test.h
(+926 files in other folders)
