# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

distributedhardwarefwk_path =
    "//foundation/distributedhardware/distributed_hardware_fwk"

common_path = "${distributedhardwarefwk_path}/common"

utils_path = "${distributedhardwarefwk_path}/utils"

services_path = "${distributedhardwarefwk_path}/services"

innerkits_path = "${distributedhardwarefwk_path}/interfaces/inner_kits"

av_trans_path = "${distributedhardwarefwk_path}/av_transport"

av_trans_ctl_center_svc_path =
    "${av_trans_path}/av_trans_control_center/services"

histreamer_path = "//foundation/multimedia/histreamer/engine"

build_flags = [ "-Werror" ]

declare_args() {
  dhardware_low_latency = false
}
