# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

distributedhardwarefwk_path =
    "//foundation/distributedhardware/distributed_hardware_fwk"

distributed_av_transport_path = "${distributedhardwarefwk_path}/av_transport"

histreamer_path = "//foundation/multimedia/histreamer/engine"

dsoftbus_path = "//foundation/communication/dsoftbus"

media_standard_path = "//foundation/multimedia/player_framework"

drivers_disaplay_path = "//drivers/peripheral/display"

common_path = "${distributed_av_transport_path}/common"

engine_path = "${distributed_av_transport_path}/av_trans_engine"

interface_path = "${distributed_av_transport_path}/interface"

handler_path = "${distributed_av_transport_path}/av_trans_handler"

control_center_path = "${distributed_av_transport_path}/av_trans_control_center"

filters_path = "${distributed_av_transport_path}/av_trans_engine/filters"

dh_fwk_utils_path = "${distributedhardwarefwk_path}/common/utils"

dh_fwk_services_path = "${distributedhardwarefwk_path}/services"

dh_fwk_sdk_path = "${distributedhardwarefwk_path}/interfaces/inner_kits"

plugin_path = "${engine_path}/plugin"

output_controller_path = "${plugin_path}/plugins/av_trans_output/output_control"

build_flags = [ "-Werror" ]
