# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_hardware_fwk/distributedhardwarefwk.gni")

ohos_shared_library("distributedhardwareutils") {
  include_dirs = [
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include/hitrace_meter",
    "//third_party/json/include",
    "//third_party/openssl:libcrypto_static",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "${common_path}/log/include",
    "${common_path}/utils/include",
    "include",
    "include/log",
    "include/eventbus",
  ]

  sources = [
    "src/anonymous_string.cpp",
    "src/dh_utils_hisysevent.cpp",
    "src/dh_utils_hitrace.cpp",
    "src/dh_utils_tool.cpp",
    "src/log/dh_log.cpp",
  ]

  deps = [ "//third_party/openssl:libcrypto_static" ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedhardwareutils\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_hardware_fwk"
}
