# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_hardware_fwk/distributedhardwarefwk.gni")

config("innerkits_external_config") {
  include_dirs = [ "${innerkits_path}/include" ]
}

ohos_shared_library("libdhfwk_sdk") {
  sanitize = {
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  public_configs = [ ":innerkits_external_config" ]

  include_dirs = [
    "${av_center_kits_path}/include",
    "${av_trans_path}/common/include",
    "${av_trans_path}/interface",
    "${innerkits_path}/include",
    "${innerkits_path}/include/ipc",
    "${common_path}/log/include",
    "${common_path}/utils/include",
    "${utils_path}/include",
    "${utils_path}/include/log",
    "${services_path}/distributedhardwarefwkservice/include",
    "//third_party/json/include",
  ]

  sources = [
    "${av_center_kits_path}/src/av_trans_control_center_callback.cpp",
    "${av_center_kits_path}/src/av_trans_control_center_callback_stub.cpp",
    "${innerkits_path}/src/distributed_hardware_fwk_kit.cpp",
    "${innerkits_path}/src/ipc/dhfwk_sa_manager.cpp",
    "${innerkits_path}/src/ipc/distributed_hardware_proxy.cpp",
    "${innerkits_path}/src/ipc/publisher_listener_stub.cpp",
  ]

  deps = [
    "${services_path}/distributedhardwarefwkservice:distributedhardwarefwksvr",
    "${utils_path}:distributedhardwareutils",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dhfwkkit\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "c_utils:utils",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_hardware_fwk"
}
