# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributedhardwarefwk/distributedhardwarefwk.gni")

ohos_shared_library("distributedhardwarefwksvr") {
  include_dirs = [
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "include",
    "include/accessmanager",
    "${common_path}/log/include",
    "${common_path}/utils/include",
    "${utils_path}/include/log",
    "${utils_path}/include",
    "//foundation/distributedhardware/devicemanager/interfaces/inner_kits/native_cpp/include",
    "//foundation/distributedhardware/devicemanager/common/include",
    "${services_path}/distributedhardwarefwkserviceimpl/include",
  ]

  sources = [
    "src/accessmanager/access_manager.cpp",
    "src/distributed_hardware_manager_factory.cpp",
    "src/distributed_hardware_service.cpp",
    "src/distributed_hardware_stub.cpp",
  ]

  deps = [
    "${services_path}/distributedhardwarefwkserviceimpl:distributedhardwarefwksvr_impl",
    "${utils_path}:distributedhardwareutils",
    "//foundation/ability/ability_runtime/interfaces/innerkits/ability_manager:ability_manager",
    "//foundation/ability/ability_runtime/services/abilitymgr:abilityms",
    "//foundation/distributedhardware/devicemanager/interfaces/inner_kits/native_cpp:devicemanagersdk",
    "//utils/native/base:utils",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dhfwksvr\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "startup_l2:syspara",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_hardware_fwk"
}
