# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_hardware_fwk/av_transport/distributed_av_transport.gni")

ohos_shared_library("avtranscenter_sdk") {
  include_dirs = [
    "include",
    "include/ipc",
    "${interface_path}",
    "${common_path}/include",
    "${dh_fwk_utils_path}/include",
    "//third_party/json/include",
  ]

  sources = [
    "${common_path}/src/av_trans_log.cpp",
    "${common_path}/src/av_trans_log.cpp",
    "src/av_trans_control_center_kit.cpp",
    "src/ipc/av_trans_control_center_callback.cpp",
    "src/ipc/av_trans_control_center_callback_stub.cpp",
    "src/ipc/av_trans_control_center_proxy.cpp",
  ]

  deps = [ "${dh_fwk_services_path}/distributedhardwarefwkservice:distributedhardwarefwksvr" ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"avtranscenter_sdk\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  part_name = "distributed_hardware_fwk"
  subsystem_name = "distributedhardware"
}
